# CharacterSegmentation

./: CMakeLists.txt  README
src/: CMakeLists.txt
src/process/: imgProcess.cpp  imgProcess.h
test/: CMakeLists.txt  test_character.cpp
